routecontroller/config/samples/route-with-no-destinations.yaml
---
# Route with no destinations
apiVersion: networking.cloudfoundry.org/v1alpha1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: cf-networking
    app.kubernetes.io/managed-by: cloudfoundry
    app.kubernetes.io/name: 7390d59b-f5f1-4c3c-9cb6-c1e2c5c3cf84 # route guid
    app.kubernetes.io/part-of: cloudfoundry
    app.kubernetes.io/version: 0.0.0
    cloudfoundry.org/domain_guid: 23bb47a0-b042-4087-8e55-97ec4b69b43a
    cloudfoundry.org/org_guid: b7ab8526-b63b-4156-90b7-2cacfd686a8b
    cloudfoundry.org/route_guid: 7390d59b-f5f1-4c3c-9cb6-c1e2c5c3cf84
    cloudfoundry.org/space_guid: d4a93829-fed3-497a-bcba-00bb2d454681
  name: 7390d59b-f5f1-4c3c-9cb6-c1e2c5c3cf84 # route guid
  namespace: cf-workloads
spec:
  destinations: []
  domain:
    internal: false
    name: apps.example.com
  host: destinationless
  path: "/some-path"
  url: "destinationless.apps.example.com/some-path"
